Hope I didn't mess this up too much! I had some issues with the styling at first cause I forgot to do npm start and this is my first time touching foundation. - Made a quick "home" page/ landing page we can expand on - Added a nav bar at the top - Changed the font to Montserrat
More updates as I'm available :)

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -41,6 +41,8 @@
 //  36. Top Bar
 
 @import 'util/util';
+@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
+
 
 // 1. Global
 // ---------
@@ -62,7 +64,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Montserrat', Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -105,7 +107,7 @@ $block-grid-max: 8;
 $header-font-family: $body-font-family;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
-$font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
+$font-family-monospace: 'Montserrat', Arial, sans-serif;
 $header-sizes: (
   small: (
     'h1': 24,
